add loader style and change height btn for change card in Order (loginStyle.css)

--- a/resources/css/loginStyle.css
+++ b/resources/css/loginStyle.css
@@ -230,7 +230,7 @@ body {
 
 .change__btn {
     width: 70px;
-    height: 26px;
+    height: 25px;
     margin-top: 1px;
     margin-left: 3px;
     border: 1px solid #333;
@@ -283,3 +283,35 @@ body {
     margin-right: auto;
 }
 
+
+.loader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ffffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+}
+
+.loader__spinBlock {
+    width: 50px;
+    height: 50px;
+    border: 5px solid #cccccc;
+    border-top-color: #1a1a1a;
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
